--- a/src/components/ErrorMessage/ErrorMessage.module.css
+++ b/src/components/ErrorMessage/ErrorMessage.module.css
@@ -11,6 +11,7 @@
   margin: 0 auto;
   display: flex;
   align-items: end;
+  justify-content: center;
   width: 570px;
   height: 400px;
   background-image: url("../../img/http-errors.jpg");
